# monty

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/actions/build-pgo-wheel/: action.yml
.github/workflows/: ci.yml  codspeed.yml  init-npm-packages.yml
crates/fuzz/fuzz_targets/: string_input_panic.rs  tokens_input_panic.rs
crates/monty/: Cargo.toml
crates/monty-cli/src/: main.rs
crates/monty-js/: package-lock.json  package.json
crates/monty-js/src/: exceptions.rs  monty_cls.rs
crates/monty-python/: Cargo.toml  README.md
crates/monty-python/python/pydantic_monty/: __init__.py  _monty.pyi  os_access.py
crates/monty-python/src/: async_dispatch.rs  build.rs  exceptions.rs  lib.rs  limits.rs  monty_cls.rs  repl.rs  serialization.rs
crates/monty-python/tests/: test_async.py  test_exceptions.py  test_mount_table.py  test_os_access.py  test_os_access_raw.py  test_os_calls.py  test_print.py  test_re.py  test_repl.py  test_serialize.py  test_start.py  test_threading.py  test_type_check.py
crates/monty-typeshed/: update.py
crates/monty/benches/: main.rs
crates/monty/src/: exception_private.rs  exception_public.rs  expressions.rs  heap.rs  heap_data.rs  heap_traits.rs  intern.rs  io.rs  lib.rs  object.rs  object_json.rs  parse.rs  prepare.rs  repl.rs  resource.rs  run.rs  run_progress.rs  value.rs
crates/monty/src/bytecode/: compiler.rs  op.rs
crates/monty/src/bytecode/vm/: async_exec.rs  binary.rs  collections.rs  mod.rs
crates/monty/src/fs/: mod.rs
crates/monty/src/modules/: math.rs  mod.rs
crates/monty/src/types/: bytes.rs  dataclass.rs  dict.rs  dict_view.rs  iter.rs  list.rs  module.rs  namedtuple.rs  path.rs  py_trait.rs  range.rs  re_match.rs  re_pattern.rs  set.rs  slice.rs  str.rs  tuple.rs
crates/monty/test_cases/: dict__ops.py  frozenset__ops.py  list__ops.py  loop__break_continue.py  math__acos_domain_error.py  math__acosh_domain_error.py  math__asin_domain_error.py  math__atanh_domain_error.py  math__cos_inf_error.py  math__cosh_overflow_error.py  math__exp_overflow_error.py  math__factorial_float_error.py  math__factorial_negative_error.py  math__floor_inf_error.py  math__floor_nan_error.py  math__floor_str_error.py  math__fmod_inf_error.py  math__gamma_neg_int_error.py  math__gcd_float_error.py  math__isqrt_negative_error.py  math__ldexp_overflow_error.py  math__log1p_domain_error.py  math__log_base1_error.py  math__log_zero_error.py  math__module.py  math__pow_domain_error.py  math__sin_inf_error.py  math__sqrt_negative_error.py  math__tan_inf_error.py  math__trunc_str_error.py  tuple__ops.py
crates/monty/tests/: asyncio.rs  binary_serde.rs  datatest_runner.rs  error_locations.rs  json_output.rs  main.rs  math_module.rs  name_lookup.rs  os_tests.rs  parse_errors.rs  print_writer.rs  repl.rs  resource_limits.rs
